--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.ApiService/SekibanDcbOrleans.ApiService.csproj
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.ApiService/SekibanDcbOrleans.ApiService.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
@@ -11,13 +11,13 @@
   </ItemGroup>
   <ItemGroup>
   <PackageReference Include="Microsoft.Extensions.Azure" Version="1.13.0" />
-  <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.5.2" />
-  <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.5.2" />
-  <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.5.2" />
-  <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="9.5.2" />
-  <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.5.2" />
-  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
+  <PackageReference Include="Aspire.Azure.Data.Tables" Version="13.1.0" />
+  <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="13.1.0" />
+  <PackageReference Include="Aspire.Azure.Storage.Queues" Version="13.1.0" />
+  <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="13.1.0" />
+  <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0" />
+  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1" />
   <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.2.1" />
   <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.2.1" />
   <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.2.1" />
@@ -29,10 +29,9 @@
   <PackageReference Include="Microsoft.Orleans.Streaming.EventHubs" Version="9.2.1" />
   <PackageReference Include="Scalar.AspNetCore" Version="2.10.1" />
   <PackageReference Include="Sekiban.Dcb.BlobStorage.AzureStorage" Version="10.0.1-preview01" />
+  <PackageReference Include="Sekiban.Dcb.Orleans.WithResult" Version="10.0.1-preview04" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
-  <PackageReference Include="Sekiban.Dcb" Version="10.0.1-preview01" />
-  <PackageReference Include="Sekiban.Dcb.Orleans" Version="10.0.1-preview01" />
-  <PackageReference Include="Sekiban.Dcb.Postgres" Version="10.0.1-preview01" />
+  <PackageReference Include="Sekiban.Dcb.Postgres" Version="10.0.1-preview04" />
   <PackageReference Include="Sekiban.Dcb.CosmosDb" Version="10.0.1-preview01" />
   <!-- Sekiban.Dcb.BlobStorage.AzureStorage package not yet published to NuGet; remove for now -->
   </ItemGroup>
