--- a/dcb/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
+++ b/dcb/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
@@ -9,22 +9,22 @@
     </PropertyGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.5.2" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0-rc.2"/>
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1"/>
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.5.2" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Azure.Data.Tables" Version="13.0.0" />
-        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="13.0.0" />
-        <PackageReference Include="Aspire.Azure.Storage.Queues" Version="13.0.0" />
-        <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="13.0.0" />
+        <PackageReference Include="Aspire.Azure.Data.Tables" Version="13.1.0" />
+        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="13.1.0" />
+        <PackageReference Include="Aspire.Azure.Storage.Queues" Version="13.1.0" />
+        <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="13.1.0" />
         <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.2.1"/>
         <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.2.1" />
         <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.2.1"/>
@@ -33,7 +33,7 @@
         <PackageReference Include="Microsoft.Orleans.Server" Version="9.2.1"/>
         <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.2.1"/>
         <PackageReference Include="Microsoft.Orleans.Streaming.AzureStorage" Version="9.2.1"/>
-        <PackageReference Include="Scalar.AspNetCore" Version="2.10.3" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.11.10" />
     </ItemGroup>
 
     <ItemGroup>
