Refactor CosmosDB Event Store and related components
- Enhanced error handling in CosmosDbEventStore by catching specific exceptions (CosmosException, JsonException, InvalidOperationException, ArgumentException) and returning appropriate ResultBox errors.
- Improved string comparison for sortable unique IDs using StringComparison.Ordinal.
- Updated ReadEventsByTagAsync and ReadAllEventsAsync methods to handle empty event IDs more efficiently.
- Added XML documentation comments for better clarity on methods and classes in CosmosDbEventStore.
- Refactored CosmosEvent and CosmosTag models to use init-only properties for Tags and added XML documentation.
- Updated CosmosDbInitializer to use structured logging for initialization messages.
- Bumped version numbers for various projects to 10.0.1-preview07 and adjusted package references for compatibility.
- Fixed potential null reference issues in tests by ensuring proper null checks and assertions.
- Updated tests to use async/await patterns for better performance and readability.

--- a/dcb/src/Sekiban.Dcb.Postgres.MigrationHost/Sekiban.Dcb.Postgres.MigrationHost.csproj
+++ b/dcb/src/Sekiban.Dcb.Postgres.MigrationHost/Sekiban.Dcb.Postgres.MigrationHost.csproj
@@ -6,10 +6,11 @@
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+        <NoWarn>$(NoWarn);MSB3277</NoWarn>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
