--- a/dcb/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
+++ b/dcb/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
@@ -6,6 +6,7 @@
         <UserSecretsId>34e8262c-ed2c-453b-b399-8d2662dc3d88</UserSecretsId>
         <LangVersion>default</LangVersion>
         <TargetFrameworks>net10.0;net9.0</TargetFrameworks>
+        <NoWarn>$(NoWarn);CS0618;ASPDEPR002</NoWarn>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
@@ -17,7 +18,7 @@
     <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.8"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11"/>
     </ItemGroup>
 
     <ItemGroup>
