--- a/dcb/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
+++ b/dcb/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.Orleans" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="13.1.0" />
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.PostgreSQL.Extensions" Version="9.7.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -25,6 +26,7 @@
         <ProjectReference Include="..\DcbOrleans.WithoutResult.ApiService\DcbOrleans.WithoutResult.ApiService.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Web\DcbOrleans.Web.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Benchmark\DcbOrleans.Benchmark.csproj"/>
+        <ProjectReference Include="..\DcbOrleans.MakeMultiProjectionState\DcbOrleans.MakeMultiProjectionState.csproj"/>
     </ItemGroup>
 
 </Project>
