--- a/dcb/internalUsages/DcbOrleans.MakeMultiProjectionState/DcbOrleans.MakeMultiProjectionState.csproj
+++ b/dcb/internalUsages/DcbOrleans.MakeMultiProjectionState/DcbOrleans.MakeMultiProjectionState.csproj
@@ -7,6 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <LangVersion>default</LangVersion>
         <NoWarn>$(NoWarn);CS0618</NoWarn>
+        <UserSecretsId>dcb-make-multiprojection-state</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
@@ -18,6 +19,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.56.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1"/>
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
     </ItemGroup>
