Add CLI for Multi Projection State Builder with support for Cosmos and PostgreSQL
- Implemented Program.cs for SekibanDcbOrleans.Cli to handle multi projection state building, listing, status checking, and saving state JSON.
- Added command-line options for database type, connection strings, minimum events, projector name, force rebuild, and verbosity.
- Created project files for SekibanDcbOrleans.Cli with necessary package references including Microsoft.Azure.Cosmos and Microsoft.EntityFrameworkCore.
- Developed helper methods for resolving database types, connection strings, and Cosmos database names.
- Implemented service registration for Cosmos and PostgreSQL databases.
- Added functionality to save projection states as JSON files for debugging purposes.

--- a/dcb/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
+++ b/dcb/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
@@ -26,7 +26,7 @@
         <ProjectReference Include="..\DcbOrleans.WithoutResult.ApiService\DcbOrleans.WithoutResult.ApiService.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Web\DcbOrleans.Web.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Benchmark\DcbOrleans.Benchmark.csproj"/>
-        <ProjectReference Include="..\DcbOrleans.MakeMultiProjectionState\DcbOrleans.MakeMultiProjectionState.csproj"/>
+        <ProjectReference Include="..\DcbOrleans.Cli\DcbOrleans.Cli.csproj"/>
     </ItemGroup>
 
 </Project>
