--- a/dcb/internalUsages/DcbOrleans.Cli/DcbOrleans.Cli.csproj
+++ b/dcb/internalUsages/DcbOrleans.Cli/DcbOrleans.Cli.csproj
@@ -7,7 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <LangVersion>default</LangVersion>
         <NoWarn>$(NoWarn);CS0618</NoWarn>
-        <UserSecretsId>dcb-make-multiprojection-state</UserSecretsId>
+        <UserSecretsId>dcb-cli</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
