--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.WithoutResult/SekibanDcbOrleans.Cli/SekibanDcbOrleans.Cli.csproj
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.WithoutResult/SekibanDcbOrleans.Cli/SekibanDcbOrleans.Cli.csproj
@@ -11,12 +11,12 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.56.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1"/>
-        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
-        <PackageReference Include="Sekiban.Dcb.WithoutResult" Version="10.0.2-preview02" />
-        <PackageReference Include="Sekiban.Dcb.Postgres" Version="10.0.2-preview02" />
-        <PackageReference Include="Sekiban.Dcb.CosmosDb" Version="10.0.2-preview02" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
+        <PackageReference Include="System.CommandLine" Version="2.0.1" />
+        <PackageReference Include="Sekiban.Dcb.WithoutResult" Version="10.0.2-preview03" />
+        <PackageReference Include="Sekiban.Dcb.Postgres" Version="10.0.2-preview03" />
+        <PackageReference Include="Sekiban.Dcb.CosmosDb" Version="10.0.2-preview03" />
     </ItemGroup>
 
     <ItemGroup>
