--- a/dcb/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
+++ b/dcb/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
@@ -18,7 +18,7 @@
         <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.Orleans" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="13.1.0" />
-        <PackageReference Include="CommunityToolkit.Aspire.Hosting.PostgreSQL.Extensions" Version="9.7.0" />
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.PostgreSQL.Extensions" Version="13.0.1-beta.468" />
     </ItemGroup>
 
     <ItemGroup>
