--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.Decider/SekibanDcbOrleans.AppHost/SekibanDcbOrleans.AppHost.csproj
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.Decider/SekibanDcbOrleans.AppHost/SekibanDcbOrleans.AppHost.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Aspire.Hosting" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.AppHost" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="13.1.0" />
+        <PackageReference Include="Aspire.Hosting.JavaScript" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.Orleans" Version="13.1.0" />
         <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="13.1.0" />
         <PackageReference Include="CommunityToolkit.Aspire.Hosting.PostgreSQL.Extensions" Version="13.0.1-beta.468" />
