--- a/dcb/src/Sekiban.Dcb.Orleans.WithResult/Sekiban.Dcb.Orleans.WithResult.csproj
+++ b/dcb/src/Sekiban.Dcb.Orleans.WithResult/Sekiban.Dcb.Orleans.WithResult.csproj
@@ -25,8 +25,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Dcb.Orleans.Core" Version="$(PackageVersion)" />
-        <PackageReference Include="Sekiban.Dcb.WithResult" Version="$(PackageVersion)" />
+        <PackageReference Include="Sekiban.Dcb.Orleans.Core" Version="10.0.2-preview05" />
+        <PackageReference Include="Sekiban.Dcb.WithResult" Version="10.0.2-preview05" />
         <PackageReference Include="Microsoft.Sbom.Targets" Version="4.1.3">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
