feat: Enhance Test Data Generation and User Directory Endpoints
- Updated TestDataEndpoints to generate sample users and include user roles in reservations.
- Added logging capabilities to track the generation process.
- Modified GenerateRoomsInternalAsync and GenerateReservationsInternalAsync to accept a logger.
- Enriched user directory results with roles by merging user access data.
- Updated UserDirectoryListItem to include roles and added a method to enrich user data.
- Introduced time zone offset handling in test data generation for accurate reservation times.
- Enhanced error handling and logging throughout the test data generation process.
- Updated appsettings.json to include new logging categories for better traceability.
- Refactored various state records to include parameterless constructors for JSON deserialization.
- Updated front-end components to display user roles and handle time zone offsets in API calls.

--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.Decider/SekibanDcbOrleans.ApiService/appsettings.json
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.Decider/SekibanDcbOrleans.ApiService/appsettings.json
@@ -9,7 +9,10 @@
       "Azure.Storage": "Warning",
       "Orleans": "Warning",
       "Orleans.Streams": "Warning",
-      "DcbOrleans.ApiService": "Information"
+      "DcbOrleans.ApiService": "Information",
+      "SekibanDcbOrleans.ApiService": "Information",
+      "SekibanDcbOrleans.ApiService.Auth": "Information",
+      "TestDataEndpoints": "Information"
     }
   },
   "AllowedHosts": "*",
