refactor: Improve JSON serialization of events in CLI programs

--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.Decider/SekibanDcbDecider.Cli/SekibanDcbDecider.Cli.csproj
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans.Decider/SekibanDcbDecider.Cli/SekibanDcbDecider.Cli.csproj
@@ -23,4 +23,8 @@
         <ProjectReference Include="..\SekibanDcbDecider.Interactions\SekibanDcbDecider.Interactions.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="output\" />
+    </ItemGroup>
+
 </Project>
