--- a/dcb/internalUsages/DcbOrleans.Cli/DcbOrleans.Cli.csproj
+++ b/dcb/internalUsages/DcbOrleans.Cli/DcbOrleans.Cli.csproj
@@ -29,6 +29,7 @@
         <ProjectReference Include="..\..\src\Sekiban.Dcb.WithResult\Sekiban.Dcb.WithResult.csproj"/>
         <ProjectReference Include="..\..\src\Sekiban.Dcb.Postgres\Sekiban.Dcb.Postgres.csproj"/>
         <ProjectReference Include="..\..\src\Sekiban.Dcb.CosmosDb\Sekiban.Dcb.CosmosDb.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Dcb.Sqlite\Sekiban.Dcb.Sqlite.csproj"/>
         <ProjectReference Include="..\Dcb.Domain\Dcb.Domain.csproj"/>
         <ProjectReference Include="..\DcbOrleans.ServiceDefaults\DcbOrleans.ServiceDefaults.csproj"/>
     </ItemGroup>
