Update package references and improve command line options in DcbOrleans projects
- Updated CommunityToolkit.Aspire.Hosting.PostgreSQL.Extensions to version 13.1.1 in DcbOrleans.AppHost.
- Updated Microsoft.SourceLink.GitHub to version 10.0.102 in multiple projects.
- Updated Microsoft.EntityFrameworkCore.Relational to version 10.0.2 in DcbOrleans.Cli.
- Updated System.CommandLine to version 2.0.2 in DcbOrleans.Cli.
- Updated Microsoft.Extensions.Configuration.UserSecrets to version 10.0.2 in DcbOrleans.Cli.
- Updated various OpenTelemetry packages to version 1.14.0 in DcbOrleans.ServiceDefaults.
- Updated Scalar.AspNetCore to version 2.12.11 in DcbOrleans.WithoutResult.ApiService.
- Updated Azure.Storage.Blobs to version 12.27.0 in Sekiban.Dcb.BlobStorage.AzureStorage.
- Updated Microsoft.Extensions.DependencyInjection.Abstractions and related packages to version 10.0.2 in multiple projects.
- Updated Testcontainers and related packages to newer versions in unit tests.
- Improved command line option handling in DcbOrleans.Cli for better readability and maintainability.

--- a/dcb/internalUsages/Dcb.Domain.WithoutResult/Dcb.Domain.WithoutResult.csproj
+++ b/dcb/internalUsages/Dcb.Domain.WithoutResult/Dcb.Domain.WithoutResult.csproj
@@ -11,5 +11,6 @@
   <ItemGroup>
     <PackageReference Include="ResultBoxes" Version="0.3.31" />
     <PackageReference Include="Microsoft.Orleans.Serialization" Version="9.2.1" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
   </ItemGroup>
 </Project>
