--- a/dcb/internalUsages/DcbOrleans.Web/DcbOrleans.Web.csproj
+++ b/dcb/internalUsages/DcbOrleans.Web/DcbOrleans.Web.csproj
@@ -6,6 +6,10 @@
         <ProjectReference Include="..\..\src\Sekiban.Dcb.Core\Sekiban.Dcb.Core.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
+    </ItemGroup>
+
     <PropertyGroup>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
