--- a/dcb/internalUsages/Dcb.Domain/Dcb.Domain.csproj
+++ b/dcb/internalUsages/Dcb.Domain/Dcb.Domain.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="ResultBoxes" Version="0.3.31"/>
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
     </ItemGroup>
 
 </Project>
