--- a/dcb/internalUsages/DcbOrleans.Benchmark/DcbOrleans.Benchmark.csproj
+++ b/dcb/internalUsages/DcbOrleans.Benchmark/DcbOrleans.Benchmark.csproj
@@ -4,4 +4,7 @@
     <Nullable>enable</Nullable>
     <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
+  </ItemGroup>
 </Project>
