--- a/pure/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
+++ b/pure/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
@@ -25,6 +25,7 @@
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <NoWarn>$(NoWarn);NU5128</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
