Update DCB workflow paths for DynamoDB

--- a/.github/workflows/run_test_dcb.yml
+++ b/.github/workflows/run_test_dcb.yml
@@ -13,7 +13,9 @@ on:
       - 'dcb/src/Sekiban.Dcb.Orleans.WithResult/**'
       - 'dcb/src/Sekiban.Dcb.Orleans.WithoutResult/**'
       - 'dcb/src/Sekiban.Dcb.BlobStorage.AzureStorage/**'
+      - 'dcb/src/Sekiban.Dcb.BlobStorage.S3/**'
       - 'dcb/src/Sekiban.Dcb.CosmosDb/**'
+      - 'dcb/src/Sekiban.Dcb.DynamoDB/**'
       - 'dcb/src/Sekiban.Dcb.Postgres/**'
       - 'dcb/src/Sekiban.Dcb.Postgres.MigrationHost/**'
       - 'dcb/tests/Sekiban.Dcb.Orleans.Tests/**'
