--- a/dcb/internalUsages/DcbOrleans.WithoutResult.ApiService/appsettings.Development.json
+++ b/dcb/internalUsages/DcbOrleans.WithoutResult.ApiService/appsettings.Development.json
@@ -18,5 +18,13 @@
   },
   "Orleans": {
     "UseInMemoryStreams": true
+  },
+  "Sekiban": {
+    "ColdEvent": {
+      "Enabled": true,
+      "Storage": {
+        "Type": "jsonl"
+      }
+    }
   }
 }
