--- a/dcb/internalUsages/DcbOrleans.WithoutResult.ApiService/appsettings.json
+++ b/dcb/internalUsages/DcbOrleans.WithoutResult.ApiService/appsettings.json
@@ -14,6 +14,20 @@
   },
   "AllowedHosts": "*",
   "Sekiban": {
-    "Database": "sqlite"
+    "Database": "sqlite",
+    "ColdEvent": {
+      "Enabled": false,
+      "PullInterval": "00:30:00",
+      "SafeWindow": "00:02:00",
+      "SegmentMaxEvents": 100000,
+      "SegmentMaxBytes": 536870912,
+      "Storage": {
+        "Type": "jsonl",
+        "BasePath": ".cold-events",
+        "JsonlDirectory": "jsonl",
+        "SqliteFile": "cold-events.sqlite",
+        "DuckDbFile": "cold-events.duckdb"
+      }
+    }
   }
 }
