chore: upgrade packages and enable duckdb cold storage

--- a/dcb/internalUsages/DcbOrleans.WithoutResult.ApiService/appsettings.Development.json
+++ b/dcb/internalUsages/DcbOrleans.WithoutResult.ApiService/appsettings.Development.json
@@ -23,7 +23,7 @@
     "ColdEvent": {
       "Enabled": true,
       "Storage": {
-        "Type": "jsonl"
+        "Type": "duckdb"
       }
     }
   }
